--- a/src/app/Components/perfil-empleador/perfil-empleador.component.html
+++ b/src/app/Components/perfil-empleador/perfil-empleador.component.html
@@ -1,4 +1,5 @@
 <header class="temp">
+    h1.ta
 </header>
 <section class="sectionp">
 <div class="cleft bacbground-primary p-5">
@@ -6,6 +7,7 @@
         <img src="https://us.123rf.com/450wm/kritchanut/kritchanut1406/kritchanut140600114/29213224-hombre-foto-de-perfil-silueta-avatar.jpg?ver=6" alt="profile1" class="img-thumbnail">
     </div>
     <ul class="list-group">
+        <li class="list-group-item">Aqui va el texto que describe las cosas basicas del perfil de la persona.</li>
         <li class="list-group-item">Nombre <h4>Julian Hernandez</h4></li>
         <li class="list-group-item">Ubicación <h5>Julian Hernandez</h5></li>
         <li class="list-group-item"> <h5>Julian Hernandez</h5></li>
@@ -14,6 +16,7 @@
       </ul>
 </div>
 <div class="row float-end p-5">
+    <h1 class="text-center">Servicios actuales</h1>
     <div class="col-sm-6 pt-2">
       <div class="card">
         <div class="card-body">
