--- a/src/app/Components/perfil-empleador/perfil-empleador.component.html
+++ b/src/app/Components/perfil-empleador/perfil-empleador.component.html
@@ -9,10 +9,10 @@
     <ul class="list-group">
         <li class="list-group-item">Aqui va el texto que describe las cosas basicas del perfil de la persona.</li>
         <li class="list-group-item">Nombre <h4>Julian Hernandez</h4></li>
-        <li class="list-group-item">Ubicación <h5>Julian Hernandez</h5></li>
-        <li class="list-group-item"> <h5>Julian Hernandez</h5></li>
-        <li class="list-group-item">Nombre <h5>Julian Hernandez</h5></li>
-        <li class="list-group-item">Nombre <h5>Julian Hernandez</h5></li>
+        <li class="list-group-item">Ubicación <h4>Bogotá D.C.</h4></li>
+        <li class="list-group-item">Direccon de residencia <h4>Cr xx #xx-XX</h4></li>
+        <li class="list-group-item">Documento <h4>1010241874</h4></li>
+        <li class="list-group-item">Contacto de Emergencia <h4>Cristian Ortiz</h4>Tel: 321568956</li>
       </ul>
 </div>
 <div class="row float-end p-5">
@@ -29,9 +29,12 @@
     <div class="col-sm-6 pt-2">
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Mecanico automotriz</h5>
+          <p class="card-text">Tienes un contrato por dos dias <br>
+              Jhoan Ramirez <br>
+              Tel: 3158462358
+          </p>
+          <a href="#" class="btn btn-primary">Detalles</a>
         </div>
       </div>
     </div>
