--- a/src/app/Components/perfil-empleador/perfil-empleador.component.css
+++ b/src/app/Components/perfil-empleador/perfil-empleador.component.css
@@ -15,3 +15,19 @@
     width: 75rem; 
      
 }
+
+.button-container{
+    display:inline-block;
+    position:relative;
+    width: 18rem;
+    }
+    
+.editbt{
+    position: absolute;
+    top: 0.25rem;
+    right:0.5rem;
+    border-radius:1.5em;
+    color:rgb(63, 63, 63);
+    text-transform:uppercase;
+    padding: auto;
+    }
