--- a/src/app/Components/details/details.component.html
+++ b/src/app/Components/details/details.component.html
@@ -17,15 +17,15 @@
                 <p class="card-text">Aqui va el texto que describe las cosas basicas del perfil de la persona.</p>
                 <a class="editbt" href='add link here' alt='Buy Tickets'><i class="fa-solid fa-pen-to-square"></i></a>
             </li>
-            <li class="list-group-item">Nombre <h4>Julian Hernandez</h4><a class="editbt" href='add link here'
+            <li class="list-group-item">Nombre <h4>Jhoan Ramirez</h4><a class="editbt" href='add link here'
                     alt='Buy Tickets'><i class="fa-solid fa-pen-to-square"></i></a></li>
             <li class="list-group-item">Ubicación <h4>Bogotá D.C.</h4><a class="editbt" href='add link here'
                     alt='Buy Tickets'><i class="fa-solid fa-pen-to-square"></i></a></li>
-            <li class="list-group-item">Direccon de residencia <h4>Cr xx #xx-XX</h4><a class="editbt"
+            <li class="list-group-item">Direccon de residencia <h4>Cra 98 #67-10</h4><a class="editbt"
                     href='add link here' alt='Buy Tickets'><i class="fa-solid fa-pen-to-square"></i></a></li>
-            <li class="list-group-item">Telefono <h4>3156600106</h4><a class="editbt" href='add link here'
+            <li class="list-group-item">Telefono <h4>3158462358</h4><a class="editbt" href='add link here'
                     alt='Buy Tickets'><i class="fa-solid fa-pen-to-square"></i></a></li>
-            <li class="list-group-item">Documento <h4>1010241874</h4><a class="editbt" href='add link here'
+            <li class="list-group-item">Documento <h4>53459671</h4><a class="editbt" href='add link here'
                     alt='Buy Tickets'><i class="fa-solid fa-pen-to-square"></i></a></li>
             <li class="list-group-item">Contacto de Emergencia <h4>Cristian Ortiz</h4>Tel: 321568956<a class="editbt"
                     href='add link here' alt='Buy Tickets'><i class="fa-solid fa-pen-to-square"></i></a></li>
@@ -35,18 +35,28 @@
         </ul>
 
     </div>
-    <div class="row">
+    <div class="row"> 
 
         <h1 class="text-center">Servicios contratados</h1>
-
-
         <div class="card">
             <div class="card-body">
-                <h5 class="card-title">Mecanico automotriz</h5>
-                <p class="card-text">Tienes un contrato por dos dias <br>
-                    Jhoan Ramirez <br>
-                    Tel: 3158462358
-                </p>
-                <a href="#" class="btn btn-primary">Detalles</a>
+                <h4 class="card-title">Mecanico automotriz</h4>
+                <p class="card-text">Perfil de persona natural con conocimiento avanzado en mecanica
+                    automotriz a nivel general, con experiencia, en motores diesel y a gasolina, transmiciones
+                    mecanicas y automaticas, radiadores, direcciones, ejes y sistema electrico. A la cual se
+                    contrata por prestacion de servicios, por el tiempo total de 7 dias para desempeñar sus labores
+                    y dar solucion a los requerimiento que necesita el cliente con la reparacion de su
+                    vehiculo.<br><br>
+                    </p><hr size="5">
+                    <p><strong>Empleado:</strong> Jhoan Ramirez </p><hr size="5">
+                    <p><strong>Documento:</strong> 53459671</p><hr size="5">
+                    <p><strong>Telefono:</strong> 3158462358</p><hr size="5">
+                    <p><strong>Ubicación</strong> Bogotá</p><hr size="5">
+                    <p><strong>Direccion de residencia:</strong> Cra 98 #67-10 Bogotá</p><hr size="5">
+                    <p><strong>Tipo de contrato:</strong> Prestacion de servicios</p><hr size="5">
+                    <p><strong>Duracion del contrato:</strong> 7 dias</p><hr size="5"> 
+                    <p><strong>Pago:</strong> COP 485.000 al finalizar el contrato</p><hr size="5">
+                <br><br>
+                <a href="#" class="btn btn-primary">Descargar Contrato</a>
             </div>
         </div>
