--- a/src/app/Components/details-empleador/details-empleador.component.html
+++ b/src/app/Components/details-empleador/details-empleador.component.html
@@ -17,15 +17,15 @@
                 <p class="card-text">Aqui va el texto que describe las cosas basicas del perfil de la persona.</p>
                 <a class="editbt" href='add link here' alt='Buy Tickets'><i class="fa-solid fa-pen-to-square"></i></a>
             </li>
-            <li class="list-group-item">Nombre <h4>Jhoan Ramirez</h4><a class="editbt" href='add link here'
+            <li class="list-group-item">Nombre <h4>Julian Hernandez</h4><a class="editbt" href='add link here'
                     alt='Buy Tickets'><i class="fa-solid fa-pen-to-square"></i></a></li>
             <li class="list-group-item">Ubicación <h4>Bogotá D.C.</h4><a class="editbt" href='add link here'
                     alt='Buy Tickets'><i class="fa-solid fa-pen-to-square"></i></a></li>
-            <li class="list-group-item">Direccon de residencia <h4>Cra 98 #67-10</h4><a class="editbt"
+            <li class="list-group-item">Direccon de residencia <h4>Cr xx #xx-XX</h4><a class="editbt"
                     href='add link here' alt='Buy Tickets'><i class="fa-solid fa-pen-to-square"></i></a></li>
-            <li class="list-group-item">Telefono <h4>3158462358</h4><a class="editbt" href='add link here'
+            <li class="list-group-item">Telefono <h4>3156600106</h4><a class="editbt" href='add link here'
                     alt='Buy Tickets'><i class="fa-solid fa-pen-to-square"></i></a></li>
-            <li class="list-group-item">Documento <h4>53459671</h4><a class="editbt" href='add link here'
+            <li class="list-group-item">Documento <h4>1010241874</h4><a class="editbt" href='add link here'
                     alt='Buy Tickets'><i class="fa-solid fa-pen-to-square"></i></a></li>
             <li class="list-group-item">Contacto de Emergencia <h4>Cristian Ortiz</h4>Tel: 321568956<a class="editbt"
                     href='add link here' alt='Buy Tickets'><i class="fa-solid fa-pen-to-square"></i></a></li>
