--- a/src/app/Components/details-empleador/details-empleador.component.html
+++ b/src/app/Components/details-empleador/details-empleador.component.html
@@ -35,3 +35,28 @@
         </ul>
 
     </div>
+    <div class="row"> 
+
+        <h1 class="text-center">Servicios contratados</h1>
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">Mecanico automotriz</h4>
+                <p class="card-text">Perfil de persona natural con conocimiento avanzado en mecanica
+                    automotriz a nivel general, con experiencia, en motores diesel y a gasolina, transmiciones
+                    mecanicas y automaticas, radiadores, direcciones, ejes y sistema electrico. A la cual se
+                    contrata por prestacion de servicios, por el tiempo total de 7 dias para desempeñar sus labores
+                    y dar solucion a los requerimiento que necesita el cliente con la reparacion de su
+                    vehiculo.<br><br>
+                    </p><hr size="5">
+                    <p><strong>Empleado:</strong> Jhoan Ramirez </p><hr size="5">
+                    <p><strong>Documento:</strong> 53459671</p><hr size="5">
+                    <p><strong>Telefono:</strong> 3158462358</p><hr size="5">
+                    <p><strong>Ubicación</strong> Bogotá</p><hr size="5">
+                    <p><strong>Direccion de residencia:</strong> Cra 98 #67-10 Bogotá</p><hr size="5">
+                    <p><strong>Tipo de contrato:</strong> Prestacion de servicios</p><hr size="5">
+                    <p><strong>Duracion del contrato:</strong> 7 dias</p><hr size="5"> 
+                    <p><strong>Pago:</strong> COP 485.000 al finalizar el contrato</p><hr size="5">
+                <br><br>
+                <a href="#" class="btn btn-primary">Descargar Contrato</a>
+            </div>
+        </div>
