--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,15 +1,55 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-primary">
-    <img class="img-logo m-1" src="https://www.adobe.com/es/express/create/media_127a4cd0c28c2753638768caf8967503d38d01e4c.jpeg?width=400&format=jpeg&optimize=medium" alt="logo" >
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    
-    <div class="collapse navbar-collapse m-3" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a id="narvar-home"class="navbar-brand text-primry1" href=''>Home</a>
-        <a class="navbar-brand text-primry1" routerLink='Perfilempleador'>Perfil</a>
-        <a class="navbar-brand text-primry1" href="#">Pricing</a>
-        <a class="navbar-brand text-primry1" href="#">Disabled</a>
-      </div>
-    </div>
-  </nav>
+
+<body>
+
+<header></header>
+<section id="sectionbanner">
+  <div>
+    <article>
+      <ul class="slider">
+      
+        
+        <li>
+          <input type="radio" id="sbutton2" name="click" checked>
+          <label for="sbutton2"></label>
+          <img src="/src/app/Components/home/slider/prueba.png" alt="">
+        </li>
+        <li>
+          <input type="radio" id="sbutton3" name="click" >
+          <label for="sbutton3"></label>
+          <img src="./Slide/slide2f.png" alt="">
+        </li>
+        <li>
+          <input type="radio" id="sbutton4" name="click">
+          <label for="sbutton4"></label>
+          <img src="FodosInicio/pexels-pixabay-265087.jpg" alt="">
+        </li>
+        <li>
+          <input type="radio" id="sbutton5" name="click">
+          <label for="sbutton5"></label>
+          <img src="FodosInicio/video.gif">
+        </li>
+      </ul>
+    </article>
+  </div>
+
+</section>
+<section id="us">
+  <div id="img"></div>
+<div id="text">
+  <h2>Nosotros</h2>
+ <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi nostrum eum, quo quis nam dignissimos pariatur consequatur laboriosam possimus perferendis consequuntur laudantium dolor aut, quibusdam veritatis, ipsa autem cum perspiciatis.</p>
+</div>
+
+</section>
+
+<section id="offers">
+<h3>Ofertas</h3>
+<div id="of1"><strong><p>Cuidado <br>de niños</p></strong></div>
+<div id="of2"><strong><p>Cocina</p></strong></div>
+<div id="of3"><strong><p>Servicios <br>Generales</p></strong></div>
+<div id="of4"><strong><p>Otros</p></strong></div>
+</section>
+
+
+</body>
+<app-footer></app-footer>
