--- a/src/app/Components/home/home.component.css
+++ b/src/app/Components/home/home.component.css
@@ -1,14 +1,183 @@
-.text-primry1{
-    color: #56008c;
+@font-face {
+    font-family: "TITLE";
+    src: url(/src/app/Components/home/FUENTES/aremat\ font.ttf);   
 }
-.img-logo{
-    height: 4rem;
-    width: 4rem;
+@font-face {
+    font-family: "BODY";
+    src: url(/src/app/Components/home/FUENTES/GOTHIC.TTF);   
 }
 
-#narvar-home{
-background-color: white;
-padding: 5px 25px;
-border-radius: 50px;
-  
+body{
+    margin: 0;
+    padding: 0;
 }
+
+#sectionbanner  {	
+	width: 100%;
+	height: 795px;
+    
+}
+
+#sectionbanner div {
+	width: 100%;
+	height: 795px;
+	display: flex;
+}
+
+#sectionbanner article{
+	width: 100%;
+	height: 795px;
+} 
+
+.slider{
+	width: 100%;
+	height:  780px;
+	margin: auto;
+	position: relative;
+	list-style: none;
+	padding: 0;
+	display: flex;
+	justify-content: center;
+	align-items: flex-end;
+}
+
+.slider img{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	opacity:0 ;
+	transition: all 0.7s;
+}
+
+.slider video{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	opacity:0 ;
+	transition: all 0.7s;
+}
+
+.slider input[type="radio"] {
+	position: relative;
+	z-index: 50;
+	margin: 5px;	
+}
+
+.slider input[type="radio"]:checked ~ img {
+	opacity: 1;
+} 
+
+.slider input[type="radio"]:checked ~ video {
+	opacity: 1;
+}
+
+
+
+
+
+#us{
+
+    width: 100%;
+    height: 520px;
+    background-color: blue;
+    background-image: url(/src/app/Components/home/nosotros.png);
+    
+
+}
+#us div{
+
+    width: 620px;
+    height: 520px;
+    background-color: rebeccapurpl;
+    float: left;
+}
+
+#us #img{
+    background-color: yello;
+    margin-right: px;
+    background-image: url(/src/app/Components/home/grupo.png);
+    background-repeat: no-repeat;
+    position: relative;
+}
+#us #text{
+margin-left: 170px;
+background-color: bisqu;
+
+}
+#us #text h2{
+    font-size: 2em;
+    text-align: center;
+    font-family: "TITLE";
+    color: #329b93;
+}
+#us #text p{
+    font-size: 1.5em;
+    padding: 30px 50px 0 50px;
+    text-align: justify;
+    font-family: BODY;
+    }
+
+    #offers{
+
+        width: 100%;
+        height: 520px;
+        background-color: yello;
+    }
+
+    #offers h3{
+        font-size: 2em;
+        font-family: TITLE;
+        color: #56008c;
+        text-align: center;
+    }
+    #offers div{
+
+        width: 315px;
+        height: 315px;
+        float: left;
+        margin: 20px;
+        background-color: #329b93;
+        cursor: pointer;
+    }
+    #offers div p{
+        color: white;
+        font-family: BODY;
+        font-size: 2em;
+        margin-top: 120px;
+        text-align: center;
+        opacity: 0;
+
+    }
+    #offers div:hover p{
+        opacity: 1;
+        transition: 1s;
+    }
+
+    #of1 {
+
+        background-image: url(/src/app/Components/home/ofertas/cuidado.png);
+
+    }
+    #of2 {
+
+        background-image: url(/src/app/Components/home/ofertas/cocina.png);
+
+    }
+
+    #of3 {
+
+        background-image: url(/src/app/Components/home/ofertas/limpiar.png);
+
+    }
+
+    #of4 {
+
+        background-image: url(/src/app/Components/home/ofertas/otro.png);
+
+    }
+    
+  
