--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,8 +1,49 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="home.component.css">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mano de Trabajo</title>
+</head>
 <body>
 
 <header></header>
-<section id="sectionbanner">
+
+<section>
+  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="/src/app/Components/home/slider/prueba.png" class="d-block w-100" alt="imagen1">
+      </div>
+      <div class="carousel-item">
+        <img src="https://img.freepik.com/foto-gratis/colegas-dando-golpe-puno_53876-64857.jpg?size=626&ext=jpg" class="d-block w-100" alt="imagen2">
+      </div>
+      <div class="carousel-item">
+        <img src="https://estaticos-cdn.prensaiberica.es/clip/c58c9a1f-34b5-49de-8249-ce7fb6d95274_16-9-discover-aspect-ratio_default_0.jpg" class="d-block w-100" alt="imagen3">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+  
+
+</section>
+
+<!--<section id="sectionbanner">
   <div>
     <article>
       <ul class="slider">
@@ -32,7 +73,8 @@
     </article>
   </div>
 
-</section>
+</section> -->
+
 <section id="us">
   <div id="img"></div>
 <div id="text">
@@ -49,7 +91,36 @@
 <div id="of3"><strong><p>Servicios <br>Generales</p></strong></div>
 <div id="of4"><strong><p>Otros</p></strong></div>
 </section>
+<footer id="contact">
+
+<div>
+  <h2>Canale de Contacto</h2>
+<p>31253998 <br>
+  5526651
+</p>
+</div>
+
+<div>
+  <h2>Dirección</h2>
+<p>carrera 25 # 28-64</p>
+</div>
+
+<div>
+  <h2>Nuestras redes</h2>
+<img src="/src/app/Components/home/redes/youtube.png" alt="">
+<img src="/src/app/Components/home/redes/instagram.png" alt="">
+<img src="/src/app/Components/home/redes/facebook.png" alt="">
+</div>
+
+
+<div id="logo"></div>
+
+
+</footer>
+
 
 
 </body>
-<app-footer></app-footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+</html>
