--- a/src/app/Components/home/home.component.css
+++ b/src/app/Components/home/home.component.css
@@ -12,10 +12,10 @@ body{
     padding: 0;
 }
 
-#sectionbanner  {	
+/*#sectionbanner  {	
 	width: 100%;
 	height: 795px;
-    
+    background-color: ;
 }
 
 #sectionbanner div {
@@ -31,7 +31,7 @@ body{
 
 .slider{
 	width: 100%;
-	height:  780px;
+	height:  770px;
 	margin: auto;
 	position: relative;
 	list-style: none;
@@ -73,7 +73,7 @@ body{
 
 .slider input[type="radio"]:checked ~ video {
 	opacity: 1;
-}
+}*/
 
 
 
@@ -180,4 +180,50 @@ background-color: bisqu;
 
     }
     
-  
+    #contact{
+
+width: 100%;
+height: 420px;
+background-color: violet;
+background-image: url(/src/app/Components/home/footer.png);
+
+    }
+
+    #contact div{
+        background-color: re;
+        width: 420px;
+        height: 240px;
+        float: left;
+        margin: 25px;
+    }
+    #contact div h2{
+
+        font-family: TITLE;
+        color: #56008c;
+        font-size: 2em;
+        text-align: center;
+    }
+    #contact div p{
+
+        font-size: 1.5em;
+        font-family: BODY;
+        text-align: center;
+        color: white;
+    }
+    #contact div img{
+        float: left;
+        padding: 0 20px 0 15px;
+        cursor: pointer;
+    }
+
+    #contact #logo{
+
+        background-color: white;
+        height: 100px;
+        width: 390px;
+        padding: 0;
+        margin: 0 0 0 68%;
+        border-radius: 80px;
+    background-image: url(/src/app/Components/home/logo-footer.png);
+    
+    }
