--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -21,7 +21,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/src/app/Components/home/slider/prueba.png" class="d-block w-100" alt="imagen1">
+        <img src="../assets/slider/prueba.png" class="d-block w-100" alt="imagen1">
       </div>
       <div class="carousel-item">
         <img src="https://img.freepik.com/foto-gratis/colegas-dando-golpe-puno_53876-64857.jpg?size=626&ext=jpg" class="d-block w-100" alt="imagen2">
