--- a/src/app/Components/perfil-empleador/perfil-empleador.component.html
+++ b/src/app/Components/perfil-empleador/perfil-empleador.component.html
@@ -38,7 +38,7 @@
               Jhoan Ramirez <br>
               Tel: 3158462358
           </p>
-          <a href="#" class="btn btn-primary">Detalles</a>
+          <a routerLink="/details"class="btn btn-primary">Detalles</a>
          </div>
       </div>
     </div>
