--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -12,7 +12,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/src/app/Components/home/slider/prueba.png" class="d-block w-100" alt="imagen1">
+        <img src="../../../assets/slider/prueba.png" class="d-block w-100" alt="imagen1">
       </div>
       <div class="carousel-item">
         <img src="https://img.freepik.com/foto-gratis/colegas-dando-golpe-puno_53876-64857.jpg?size=626&ext=jpg" class="d-block w-100" alt="imagen2">
@@ -98,9 +98,9 @@
 
 <div>
   <h2>Nuestras redes</h2>
-<img src="/src/app/Components/home/redes/youtube.png" alt="">
-<img src="/src/app/Components/home/redes/instagram.png" alt="">
-<img src="/src/app/Components/home/redes/facebook.png" alt="">
+<img src="../../../assets/redes/youtube.png" alt="">
+<img src="../../../assets/redes/instagram.png" alt="">
+<img src="../../../assets/redes/facebook.png" alt="">
 </div>
 
 
