--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -8,7 +8,7 @@
 <nav class="menu">
 
 <ul>
-  <a href="http://localhost:4200/"><img src="../../../assets/redes/logo-footer.png" alt=""></a>
+  <a href="#carouselExampleIndicators"><img src="../../../assets/redes/logo-footer.png" alt=""></a>
   <li><strong><a href="#us-btn">Nosotros</a></strong></li>
   <li><strong><a href="#offers-btn">Ofertas</a></strong></li>
   <li><strong><a href="">Empleado</a></strong></li>
